--- a/groupe7_HackatonBack_Aout2025/src/main/resources/application.properties
+++ b/groupe7_HackatonBack_Aout2025/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# Configuration du serveur
+server.port=8080
 spring.application.name=groupe7_HackatonBack_Aout2025
+
+# Configuration de la base de données MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/file_explorer?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=yourStrong(!)Password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuration JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuration des fichiers uploadés
+app.upload.dir=./uploads
+app.max-file-size=10MB
+
+# Configuration CORS pour le frontend
+spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# Configuration Swagger/OpenAPI
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
