--- a/groupe7_HackatonBack_Aout2025/src/main/resources/application.properties
+++ b/groupe7_HackatonBack_Aout2025/src/main/resources/application.properties
@@ -16,10 +16,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Configuration des fichiers uploadés
 app.upload.dir=./uploads
-app.max-file-size=10MB
+app.max-file-size=50MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=60MB
 
 # Configuration CORS pour le frontend
-spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-origins=http://localhost:5173,http://127.0.0.1:5173
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
